vcluster_versioned_docs/version-0.30.0/_partials/config/policies.mdx

<details className="config-field" data-expandable="true">
<summary>

## `policies` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies}

Policies to enforce for the virtual cluster deployment as well as within the virtual cluster.

</summary>




<details className="config-field" data-expandable="true">
<summary>

### `networkPolicy` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy}

NetworkPolicy specifies network policy options.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> {#policies-networkPolicy-enabled}

Enabled defines if the network policy should be deployed by vCluster.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `annotations` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> {#policies-networkPolicy-annotations}

Annotations are extra annotations for this resource.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `labels` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> {#policies-networkPolicy-labels}

Labels are extra labels for this resource.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `fallbackDns` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default">8.8.8.8</span> <span className="config-field-enum"></span> {#policies-networkPolicy-fallbackDns}

FallbackDNS is the fallback DNS server to use if the virtual cluster does not have a DNS server.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `controlPlane` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane}

ControlPlane network policy rules

</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `ingress` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-ingress}

Ingress rules for the vCluster control plane.

</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `ports` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-ingress-ports}

ports is a list of ports which should be made accessible on the pods selected for
this rule. Each item in this list is combined using a logical OR. If this field is
empty or missing, this rule matches all ports (traffic not restricted by port).
If this field is present and contains at least one item, then this rule allows
traffic only if the traffic matches at least one port in the list.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `protocol` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-ingress-ports-protocol}

protocol represents the protocol (TCP, UDP, or SCTP) which traffic must match.
If not specified, this field defaults to TCP.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `port` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-ingress-ports-port}

port represents the port on the given protocol. This can either be a numerical or named
port on a pod. If this field is not provided, this matches all port names and
numbers.
If present, only traffic on the specified protocol AND port will be matched.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `endPort` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-ingress-ports-endPort}

endPort indicates that the range of ports from port to endPort if set, inclusive,
should be allowed by the policy. This field cannot be defined if the port field
is not defined or if the port field is defined as a named (string) port.
The endPort must be equal or greater than port.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `from` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-ingress-from}

from is a list of sources which should be able to access the pods selected for this rule.
Items in this list are combined using a logical OR operation. If this field is
empty or missing, this rule matches all sources (traffic not restricted by
source). If this field is present and contains at least one item, this rule
allows traffic only if the traffic matches at least one item in the from list.

</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `podSelector` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-ingress-from-podSelector}

podSelector is a label selector which selects pods. This field follows standard label
selector semantics; if present but empty, it selects all pods.

If namespaceSelector is also set, then the NetworkPolicyPeer as a whole selects
the pods matching podSelector in the Namespaces selected by NamespaceSelector.
Otherwise it selects the pods matching podSelector in the policy's own namespace.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `matchLabels` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-ingress-from-podSelector-matchLabels}



</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `matchExpressions` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-ingress-from-podSelector-matchExpressions}



</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `key` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-ingress-from-podSelector-matchExpressions-key}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `operator` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-ingress-from-podSelector-matchExpressions-operator}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `values` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-ingress-from-podSelector-matchExpressions-values}



</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `namespaceSelector` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-ingress-from-namespaceSelector}

namespaceSelector selects namespaces using cluster-scoped labels. This field follows
standard label selector semantics; if present but empty, it selects all namespaces.

If podSelector is also set, then the NetworkPolicyPeer as a whole selects
the pods matching podSelector in the namespaces selected by namespaceSelector.
Otherwise it selects all pods in the namespaces selected by namespaceSelector.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `matchLabels` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-ingress-from-namespaceSelector-matchLabels}



</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `matchExpressions` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-ingress-from-namespaceSelector-matchExpressions}



</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `key` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-ingress-from-namespaceSelector-matchExpressions-key}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `operator` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-ingress-from-namespaceSelector-matchExpressions-operator}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `values` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-ingress-from-namespaceSelector-matchExpressions-values}



</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `ipBlock` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-ingress-from-ipBlock}

ipBlock defines policy on a particular IPBlock. If this field is set then
neither of the other fields can be.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `cidr` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-ingress-from-ipBlock-cidr}

CIDR defines the allowed workload public egress destination.
Valid examples are "0.0.0.0/0", "192.168.1.0/24" or "2001:db8::/64"

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `except` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-ingress-from-ipBlock-except}

Except is a slice of CIDRs that should not be included. Items outside the cidr range will be rejected.
Valid examples are "192.168.1.0/24" or "2001:db8::/64".

</summary>



</details>


</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `egress` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-egress}

Egress rules for the vCluster control plane.

</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `ports` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-egress-ports}

ports is a list of destination ports for outgoing traffic.
Each item in this list is combined using a logical OR. If this field is
empty or missing, this rule matches all ports (traffic not restricted by port).
If this field is present and contains at least one item, then this rule allows
traffic only if the traffic matches at least one port in the list.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `protocol` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-egress-ports-protocol}

protocol represents the protocol (TCP, UDP, or SCTP) which traffic must match.
If not specified, this field defaults to TCP.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `port` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-egress-ports-port}

port represents the port on the given protocol. This can either be a numerical or named
port on a pod. If this field is not provided, this matches all port names and
numbers.
If present, only traffic on the specified protocol AND port will be matched.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `endPort` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-egress-ports-endPort}

endPort indicates that the range of ports from port to endPort if set, inclusive,
should be allowed by the policy. This field cannot be defined if the port field
is not defined or if the port field is defined as a named (string) port.
The endPort must be equal or greater than port.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `to` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-egress-to}

to is a list of destinations for outgoing traffic of pods selected for this rule.
Items in this list are combined using a logical OR operation. If this field is
empty or missing, this rule matches all destinations (traffic not restricted by
destination). If this field is present and contains at least one item, this rule
allows traffic only if the traffic matches at least one item in the to list.

</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `podSelector` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-egress-to-podSelector}

podSelector is a label selector which selects pods. This field follows standard label
selector semantics; if present but empty, it selects all pods.

If namespaceSelector is also set, then the NetworkPolicyPeer as a whole selects
the pods matching podSelector in the Namespaces selected by NamespaceSelector.
Otherwise it selects the pods matching podSelector in the policy's own namespace.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `matchLabels` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-egress-to-podSelector-matchLabels}



</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `matchExpressions` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-egress-to-podSelector-matchExpressions}



</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `key` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-egress-to-podSelector-matchExpressions-key}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `operator` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-egress-to-podSelector-matchExpressions-operator}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `values` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-egress-to-podSelector-matchExpressions-values}



</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `namespaceSelector` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-egress-to-namespaceSelector}

namespaceSelector selects namespaces using cluster-scoped labels. This field follows
standard label selector semantics; if present but empty, it selects all namespaces.

If podSelector is also set, then the NetworkPolicyPeer as a whole selects
the pods matching podSelector in the namespaces selected by namespaceSelector.
Otherwise it selects all pods in the namespaces selected by namespaceSelector.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `matchLabels` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-egress-to-namespaceSelector-matchLabels}



</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `matchExpressions` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-egress-to-namespaceSelector-matchExpressions}



</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `key` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-egress-to-namespaceSelector-matchExpressions-key}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `operator` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-egress-to-namespaceSelector-matchExpressions-operator}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `values` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-egress-to-namespaceSelector-matchExpressions-values}



</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `ipBlock` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-egress-to-ipBlock}

ipBlock defines policy on a particular IPBlock. If this field is set then
neither of the other fields can be.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `cidr` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-egress-to-ipBlock-cidr}

CIDR defines the allowed workload public egress destination.
Valid examples are "0.0.0.0/0", "192.168.1.0/24" or "2001:db8::/64"

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `except` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-controlPlane-egress-to-ipBlock-except}

Except is a slice of CIDRs that should not be included. Items outside the cidr range will be rejected.
Valid examples are "192.168.1.0/24" or "2001:db8::/64".

</summary>



</details>


</details>


</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `workload` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload}

Workload network policy rules

</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `publicEgress` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-publicEgress}

PublicEgress holds the public outgoing connections options for the vCluster workloads.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-publicEgress-enabled}

Enabled defines if the workload public egress should be enabled or disabled.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `cidr` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-publicEgress-cidr}

CIDR defines the allowed workload public egress destination.
Valid examples are "0.0.0.0/0", "192.168.1.0/24" or "2001:db8::/64"

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `except` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-publicEgress-except}

Except is a slice of CIDRs that should not be included. Items outside the cidr range will be rejected.
Valid examples are "192.168.1.0/24" or "2001:db8::/64".

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `ingress` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-ingress}

Ingress rules for the vCluster workloads.

</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `ports` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-ingress-ports}

ports is a list of ports which should be made accessible on the pods selected for
this rule. Each item in this list is combined using a logical OR. If this field is
empty or missing, this rule matches all ports (traffic not restricted by port).
If this field is present and contains at least one item, then this rule allows
traffic only if the traffic matches at least one port in the list.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `protocol` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-ingress-ports-protocol}

protocol represents the protocol (TCP, UDP, or SCTP) which traffic must match.
If not specified, this field defaults to TCP.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `port` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-ingress-ports-port}

port represents the port on the given protocol. This can either be a numerical or named
port on a pod. If this field is not provided, this matches all port names and
numbers.
If present, only traffic on the specified protocol AND port will be matched.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `endPort` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-ingress-ports-endPort}

endPort indicates that the range of ports from port to endPort if set, inclusive,
should be allowed by the policy. This field cannot be defined if the port field
is not defined or if the port field is defined as a named (string) port.
The endPort must be equal or greater than port.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `from` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-ingress-from}

from is a list of sources which should be able to access the pods selected for this rule.
Items in this list are combined using a logical OR operation. If this field is
empty or missing, this rule matches all sources (traffic not restricted by
source). If this field is present and contains at least one item, this rule
allows traffic only if the traffic matches at least one item in the from list.

</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `podSelector` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-ingress-from-podSelector}

podSelector is a label selector which selects pods. This field follows standard label
selector semantics; if present but empty, it selects all pods.

If namespaceSelector is also set, then the NetworkPolicyPeer as a whole selects
the pods matching podSelector in the Namespaces selected by NamespaceSelector.
Otherwise it selects the pods matching podSelector in the policy's own namespace.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `matchLabels` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-ingress-from-podSelector-matchLabels}



</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `matchExpressions` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-ingress-from-podSelector-matchExpressions}



</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `key` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-ingress-from-podSelector-matchExpressions-key}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `operator` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-ingress-from-podSelector-matchExpressions-operator}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `values` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-ingress-from-podSelector-matchExpressions-values}



</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `namespaceSelector` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-ingress-from-namespaceSelector}

namespaceSelector selects namespaces using cluster-scoped labels. This field follows
standard label selector semantics; if present but empty, it selects all namespaces.

If podSelector is also set, then the NetworkPolicyPeer as a whole selects
the pods matching podSelector in the namespaces selected by namespaceSelector.
Otherwise it selects all pods in the namespaces selected by namespaceSelector.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `matchLabels` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-ingress-from-namespaceSelector-matchLabels}



</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `matchExpressions` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-ingress-from-namespaceSelector-matchExpressions}



</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `key` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-ingress-from-namespaceSelector-matchExpressions-key}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `operator` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-ingress-from-namespaceSelector-matchExpressions-operator}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `values` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-ingress-from-namespaceSelector-matchExpressions-values}



</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `ipBlock` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-ingress-from-ipBlock}

ipBlock defines policy on a particular IPBlock. If this field is set then
neither of the other fields can be.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `cidr` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-ingress-from-ipBlock-cidr}

CIDR defines the allowed workload public egress destination.
Valid examples are "0.0.0.0/0", "192.168.1.0/24" or "2001:db8::/64"

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `except` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-ingress-from-ipBlock-except}

Except is a slice of CIDRs that should not be included. Items outside the cidr range will be rejected.
Valid examples are "192.168.1.0/24" or "2001:db8::/64".

</summary>



</details>


</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `egress` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-egress}

Egress rules for the vCluster workloads.

</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `ports` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-egress-ports}

ports is a list of destination ports for outgoing traffic.
Each item in this list is combined using a logical OR. If this field is
empty or missing, this rule matches all ports (traffic not restricted by port).
If this field is present and contains at least one item, then this rule allows
traffic only if the traffic matches at least one port in the list.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `protocol` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-egress-ports-protocol}

protocol represents the protocol (TCP, UDP, or SCTP) which traffic must match.
If not specified, this field defaults to TCP.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `port` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-egress-ports-port}

port represents the port on the given protocol. This can either be a numerical or named
port on a pod. If this field is not provided, this matches all port names and
numbers.
If present, only traffic on the specified protocol AND port will be matched.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `endPort` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-egress-ports-endPort}

endPort indicates that the range of ports from port to endPort if set, inclusive,
should be allowed by the policy. This field cannot be defined if the port field
is not defined or if the port field is defined as a named (string) port.
The endPort must be equal or greater than port.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `to` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-egress-to}

to is a list of destinations for outgoing traffic of pods selected for this rule.
Items in this list are combined using a logical OR operation. If this field is
empty or missing, this rule matches all destinations (traffic not restricted by
destination). If this field is present and contains at least one item, this rule
allows traffic only if the traffic matches at least one item in the to list.

</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `podSelector` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-egress-to-podSelector}

podSelector is a label selector which selects pods. This field follows standard label
selector semantics; if present but empty, it selects all pods.

If namespaceSelector is also set, then the NetworkPolicyPeer as a whole selects
the pods matching podSelector in the Namespaces selected by NamespaceSelector.
Otherwise it selects the pods matching podSelector in the policy's own namespace.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `matchLabels` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-egress-to-podSelector-matchLabels}



</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `matchExpressions` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-egress-to-podSelector-matchExpressions}



</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `key` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-egress-to-podSelector-matchExpressions-key}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `operator` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-egress-to-podSelector-matchExpressions-operator}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `values` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-egress-to-podSelector-matchExpressions-values}



</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `namespaceSelector` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-egress-to-namespaceSelector}

namespaceSelector selects namespaces using cluster-scoped labels. This field follows
standard label selector semantics; if present but empty, it selects all namespaces.

If podSelector is also set, then the NetworkPolicyPeer as a whole selects
the pods matching podSelector in the namespaces selected by namespaceSelector.
Otherwise it selects all pods in the namespaces selected by namespaceSelector.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `matchLabels` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-egress-to-namespaceSelector-matchLabels}



</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `matchExpressions` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-egress-to-namespaceSelector-matchExpressions}



</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `key` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-egress-to-namespaceSelector-matchExpressions-key}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `operator` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-egress-to-namespaceSelector-matchExpressions-operator}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `values` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-egress-to-namespaceSelector-matchExpressions-values}



</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `ipBlock` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-egress-to-ipBlock}

ipBlock defines policy on a particular IPBlock. If this field is set then
neither of the other fields can be.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `cidr` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-egress-to-ipBlock-cidr}

CIDR defines the allowed workload public egress destination.
Valid examples are "0.0.0.0/0", "192.168.1.0/24" or "2001:db8::/64"

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `except` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-networkPolicy-workload-egress-to-ipBlock-except}

Except is a slice of CIDRs that should not be included. Items outside the cidr range will be rejected.
Valid examples are "192.168.1.0/24" or "2001:db8::/64".

</summary>



</details>


</details>


</details>


</details>


</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `podSecurityStandard` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-podSecurityStandard}

PodSecurityStandard that can be enforced can be one of: empty (""), baseline, restricted or privileged

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

### `resourceQuota` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-resourceQuota}

ResourceQuota specifies resource quota options.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string|boolean</span> <span className="config-field-default">auto</span> <span className="config-field-enum"></span> {#policies-resourceQuota-enabled}

Enabled defines if the resource quota should be enabled. "auto" means that if limitRange is enabled,
the resourceQuota will be enabled as well.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `quota` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">map&#91;count/configmaps:100 count/endpoints:40 count/persistentvolumeclaims:20 count/pods:20 count/secrets:100 count/services:20 limits.cpu:20 limits.ephemeral-storage:160Gi limits.memory:40Gi requests.cpu:10 requests.ephemeral-storage:60Gi requests.memory:20Gi requests.storage:100Gi services.loadbalancers:1 services.nodeports:0&#93;</span> <span className="config-field-enum"></span> {#policies-resourceQuota-quota}

Quota are the quota options

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `scopeSelector` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">map&#91;matchExpressions:&#91;&#93;&#93;</span> <span className="config-field-enum"></span> {#policies-resourceQuota-scopeSelector}

ScopeSelector is the resource quota scope selector

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `scopes` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default">&#91;&#93;</span> <span className="config-field-enum"></span> {#policies-resourceQuota-scopes}

Scopes are the resource quota scopes

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `annotations` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> {#policies-resourceQuota-annotations}

Annotations are extra annotations for this resource.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `labels` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> {#policies-resourceQuota-labels}

Labels are extra labels for this resource.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `limitRange` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-limitRange}

LimitRange specifies limit range options.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string|boolean</span> <span className="config-field-default">auto</span> <span className="config-field-enum"></span> {#policies-limitRange-enabled}

Enabled defines if the limit range should be deployed by vCluster. "auto" means that if resourceQuota is enabled,
the limitRange will be enabled as well.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `default` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">map&#91;cpu:1 ephemeral-storage:8Gi memory:512Mi&#93;</span> <span className="config-field-enum"></span> {#policies-limitRange-default}

Default are the default limits for the limit range

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `defaultRequest` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">map&#91;cpu:100m ephemeral-storage:3Gi memory:128Mi&#93;</span> <span className="config-field-enum"></span> {#policies-limitRange-defaultRequest}

DefaultRequest are the default request options for the limit range

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `max` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> {#policies-limitRange-max}

Max are the max limits for the limit range

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `min` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> {#policies-limitRange-min}

Min are the min limits for the limit range

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `annotations` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> {#policies-limitRange-annotations}

Annotations are extra annotations for this resource.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `labels` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> {#policies-limitRange-labels}

Labels are extra labels for this resource.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `centralAdmission` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission}

CentralAdmission defines what validating or mutating webhooks should be enforced within the virtual cluster.

</summary>




<details className="config-field" data-expandable="true">
<summary>

#### `validatingWebhooks` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-validatingWebhooks}

ValidatingWebhooks are validating webhooks that should be enforced in the virtual cluster

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `kind` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-validatingWebhooks-kind}

Kind is a string value representing the REST resource this object represents.
Servers may infer this from the endpoint the client submits requests to.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `apiVersion` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-validatingWebhooks-apiVersion}

APIVersion defines the versioned schema of this representation of an object.
Servers should convert recognized schemas to the latest internal value, and
may reject unrecognized values.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `metadata` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-validatingWebhooks-metadata}

Standard object metadata; More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#metadata.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-validatingWebhooks-metadata-name}

Name must be unique within a namespace. Is required when creating resources, although
some resources may allow a client to request the generation of an appropriate name
automatically. Name is primarily intended for creation idempotence and configuration
definition.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `labels` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-validatingWebhooks-metadata-labels}

Map of string keys and values that can be used to organize and categorize
(scope and select) objects. May match selectors of replication controllers
and services.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `annotations` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-validatingWebhooks-metadata-annotations}

Annotations is an unstructured key value map stored with a resource that may be
set by external tools to store and retrieve arbitrary metadata.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `webhooks` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-validatingWebhooks-webhooks}

Webhooks is a list of webhooks and the affected resources and operations.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-validatingWebhooks-webhooks-name}

The name of the admission webhook.
Name should be fully qualified, e.g., imagepolicy.kubernetes.io, where
"imagepolicy" is the name of the webhook, and kubernetes.io is the name
of the organization.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `clientConfig` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-validatingWebhooks-webhooks-clientConfig}

ClientConfig defines how to communicate with the hook.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `url` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-validatingWebhooks-webhooks-clientConfig-url}

URL gives the location of the webhook, in standard URL form
(`scheme://host:port/path`). Exactly one of `url` or `service`
must be specified.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `service` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-validatingWebhooks-webhooks-clientConfig-service}

Service is a reference to the service for this webhook. Either
`service` or `url` must be specified.

If the webhook is running within the cluster, then you should use `service`.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `namespace` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-validatingWebhooks-webhooks-clientConfig-service-namespace}

Namespace is the namespace of the service.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-validatingWebhooks-webhooks-clientConfig-service-name}

Name is the name of the service.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `path` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-validatingWebhooks-webhooks-clientConfig-service-path}

Path is an optional URL path which will be sent in any request to
this service.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `port` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-validatingWebhooks-webhooks-clientConfig-service-port}

If specified, the port on the service that hosting webhook.
Default to 443 for backward compatibility.
`port` should be a valid port number (1-65535, inclusive).

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `caBundle` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-validatingWebhooks-webhooks-clientConfig-caBundle}

CABundle is a PEM encoded CA bundle which will be used to validate the webhook's server certificate.
If unspecified, system trust roots on the apiserver are used.

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `rules` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-validatingWebhooks-webhooks-rules}

Rules describes what operations on what resources/subresources the webhook cares about.
The webhook cares about an operation if it matches _any_ Rule.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `failurePolicy` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-validatingWebhooks-webhooks-failurePolicy}

FailurePolicy defines how unrecognized errors from the admission endpoint are handled -
allowed values are Ignore or Fail. Defaults to Fail.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `matchPolicy` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-validatingWebhooks-webhooks-matchPolicy}

matchPolicy defines how the "rules" list is used to match incoming requests.
Allowed values are "Exact" or "Equivalent".

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `namespaceSelector` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-validatingWebhooks-webhooks-namespaceSelector}

NamespaceSelector decides whether to run the webhook on an object based
on whether the namespace for that object matches the selector. If the
object itself is a namespace, the matching is performed on
object.metadata.labels. If the object is another cluster scoped resource,
it never skips the webhook.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `objectSelector` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-validatingWebhooks-webhooks-objectSelector}

ObjectSelector decides whether to run the webhook based on if the
object has matching labels. objectSelector is evaluated against both
the oldObject and newObject that would be sent to the webhook, and
is considered to match if either object matches the selector.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `sideEffects` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-validatingWebhooks-webhooks-sideEffects}

SideEffects states whether this webhook has side effects.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `timeoutSeconds` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-validatingWebhooks-webhooks-timeoutSeconds}

TimeoutSeconds specifies the timeout for this webhook.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `admissionReviewVersions` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-validatingWebhooks-webhooks-admissionReviewVersions}

AdmissionReviewVersions is an ordered list of preferred `AdmissionReview`
versions the Webhook expects.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `matchConditions` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-validatingWebhooks-webhooks-matchConditions}

MatchConditions is a list of conditions that must be met for a request to be sent to this
webhook. Match conditions filter requests that have already been matched by the rules,
namespaceSelector, and objectSelector. An empty list of matchConditions matches all requests.
There are a maximum of 64 match conditions allowed.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `mutatingWebhooks` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-mutatingWebhooks}

MutatingWebhooks are mutating webhooks that should be enforced in the virtual cluster

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `kind` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-mutatingWebhooks-kind}

Kind is a string value representing the REST resource this object represents.
Servers may infer this from the endpoint the client submits requests to.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `apiVersion` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-mutatingWebhooks-apiVersion}

APIVersion defines the versioned schema of this representation of an object.
Servers should convert recognized schemas to the latest internal value, and
may reject unrecognized values.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `metadata` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-mutatingWebhooks-metadata}

Standard object metadata; More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#metadata.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-mutatingWebhooks-metadata-name}

Name must be unique within a namespace. Is required when creating resources, although
some resources may allow a client to request the generation of an appropriate name
automatically. Name is primarily intended for creation idempotence and configuration
definition.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `labels` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-mutatingWebhooks-metadata-labels}

Map of string keys and values that can be used to organize and categorize
(scope and select) objects. May match selectors of replication controllers
and services.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `annotations` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-mutatingWebhooks-metadata-annotations}

Annotations is an unstructured key value map stored with a resource that may be
set by external tools to store and retrieve arbitrary metadata.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `webhooks` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-mutatingWebhooks-webhooks}

Webhooks is a list of webhooks and the affected resources and operations.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `reinvocationPolicy` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-mutatingWebhooks-webhooks-reinvocationPolicy}

reinvocationPolicy indicates whether this webhook should be called multiple times as part of a single admission evaluation.
Allowed values are "Never" and "IfNeeded".

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-mutatingWebhooks-webhooks-name}

The name of the admission webhook.
Name should be fully qualified, e.g., imagepolicy.kubernetes.io, where
"imagepolicy" is the name of the webhook, and kubernetes.io is the name
of the organization.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `clientConfig` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-mutatingWebhooks-webhooks-clientConfig}

ClientConfig defines how to communicate with the hook.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `url` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-mutatingWebhooks-webhooks-clientConfig-url}

URL gives the location of the webhook, in standard URL form
(`scheme://host:port/path`). Exactly one of `url` or `service`
must be specified.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `service` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-mutatingWebhooks-webhooks-clientConfig-service}

Service is a reference to the service for this webhook. Either
`service` or `url` must be specified.

If the webhook is running within the cluster, then you should use `service`.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `namespace` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-mutatingWebhooks-webhooks-clientConfig-service-namespace}

Namespace is the namespace of the service.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-mutatingWebhooks-webhooks-clientConfig-service-name}

Name is the name of the service.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `path` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-mutatingWebhooks-webhooks-clientConfig-service-path}

Path is an optional URL path which will be sent in any request to
this service.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `port` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-mutatingWebhooks-webhooks-clientConfig-service-port}

If specified, the port on the service that hosting webhook.
Default to 443 for backward compatibility.
`port` should be a valid port number (1-65535, inclusive).

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `caBundle` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-mutatingWebhooks-webhooks-clientConfig-caBundle}

CABundle is a PEM encoded CA bundle which will be used to validate the webhook's server certificate.
If unspecified, system trust roots on the apiserver are used.

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `rules` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-mutatingWebhooks-webhooks-rules}

Rules describes what operations on what resources/subresources the webhook cares about.
The webhook cares about an operation if it matches _any_ Rule.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `failurePolicy` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-mutatingWebhooks-webhooks-failurePolicy}

FailurePolicy defines how unrecognized errors from the admission endpoint are handled -
allowed values are Ignore or Fail. Defaults to Fail.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `matchPolicy` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-mutatingWebhooks-webhooks-matchPolicy}

matchPolicy defines how the "rules" list is used to match incoming requests.
Allowed values are "Exact" or "Equivalent".

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `namespaceSelector` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-mutatingWebhooks-webhooks-namespaceSelector}

NamespaceSelector decides whether to run the webhook on an object based
on whether the namespace for that object matches the selector. If the
object itself is a namespace, the matching is performed on
object.metadata.labels. If the object is another cluster scoped resource,
it never skips the webhook.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `objectSelector` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-mutatingWebhooks-webhooks-objectSelector}

ObjectSelector decides whether to run the webhook based on if the
object has matching labels. objectSelector is evaluated against both
the oldObject and newObject that would be sent to the webhook, and
is considered to match if either object matches the selector.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `sideEffects` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-mutatingWebhooks-webhooks-sideEffects}

SideEffects states whether this webhook has side effects.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `timeoutSeconds` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-mutatingWebhooks-webhooks-timeoutSeconds}

TimeoutSeconds specifies the timeout for this webhook.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `admissionReviewVersions` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-mutatingWebhooks-webhooks-admissionReviewVersions}

AdmissionReviewVersions is an ordered list of preferred `AdmissionReview`
versions the Webhook expects.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `matchConditions` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#policies-centralAdmission-mutatingWebhooks-webhooks-matchConditions}

MatchConditions is a list of conditions that must be met for a request to be sent to this
webhook. Match conditions filter requests that have already been matched by the rules,
namespaceSelector, and objectSelector. An empty list of matchConditions matches all requests.
There are a maximum of 64 match conditions allowed.

</summary>



</details>


</details>


</details>


</details>


</details>
